fixed spacing of buttons, toggle, now fixing spacing for image track

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ body[data-nav="true"][data-button-clicked="true"] > #nav-toggle {
 
 /* Show the image track when a button is clicked */
 body[data-button-clicked="true"] > .image-track {
-    bottom: 0%;
+    bottom: 10%;
     transform: translateY(-50%);
 }
 
@@ -270,17 +270,18 @@ body[data-button-clicked="true"] > .image-track {
 
 /* Nav links down */
 body:not([data-nav="true"])[data-button-clicked="true"] > #nav-toggle {
-    transform: translateX(-50%) translateY(-71vh) scale(1);
+    transform: translateX(-50%) translateY(-70vh) scale(1);
     transition: transform 900ms cubic-bezier(.13, .53, .38, .97);
 }
 
+/* keep main up lol */
 body:not([data-nav="true"])[data-button-clicked="true"] > main {
     transform: translateY(-100vh) scale(1);
     transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
 }
 
 body:not([data-nav="true"])[data-button-clicked="true"] > nav > #nav-links {
-    transform: translateY(-78vh) scale(1);
+    transform: translateY(-70vh) scale(1);
     transition: transform 800ms cubic-bezier(.83, .3, .38, .97);
 }
 
